force-app/main/default/objects/Session_Protocol_Scale__c/Session_Protocol_Scale__c.object-meta.xml
<CustomObject>
    <label>Session Protocol Scale</label>
    <nameField>
        <displayFormat>SPSN-{00000}</displayFormat>
        <label>Session Protocol Scale Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Protocol Scales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>