force-app/main/default/objects/Session_Protocol_Scale__c/fields/Protocol_Scale__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Scale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Protocol Scale</label>
    <referenceTo>Protocol_Scale__c</referenceTo>
    <relationshipLabel>Session Protocol Scales</relationshipLabel>
    <relationshipName>Session_Protocol_Scales</relationshipName>
    <type>Lookup</type>
</CustomField>