force-app/main/default/objects/Session_Protocol_Scale__c/fields/Protocol_Scale_Name__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Scale_Name__c</fullName>
    <formula>Protocol_Scale__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Protocol Scale Name</label>
    <type>Text</type>
</CustomField>