force-app/main/default/objects/Session_Protocol_Scale__c/fields/Protocol_Score__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Score__c</fullName>
    <label>Protocol Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>