force-app/main/default/objects/Session_Protocol_Scale__c/fields/Protocol_Score_Number__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Score_Number__c</fullName>
    <formula>VALUE(LEFT(Protocol_Score__c,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Protocol Score (Number)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>