force-app/main/default/objects/Session_Protocol_Scale__c/fields/Session_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Session_Protocol__c</fullName>
    <label>Session Protocol</label>
    <referenceTo>Session_Protocol__c</referenceTo>
    <relationshipLabel>Session Protocol Scales</relationshipLabel>
    <relationshipName>Session_Protocol_Scales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>