force-app/main/default/objects/Session_Protocol_Scale__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Session_Protocol__c</columns>
    <columns>Protocol_Scale__c</columns>
    <columns>Protocol_Score__c</columns>
    <columns>Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>